--- a/back/package.json
+++ b/back/package.json
@@ -18,7 +18,7 @@
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
-    "multer": "^1.4.4",
+    "multer": "^1.4.4-lts",
     "mysql2": "^2.3.3",
     "sequelize": "^6.19.0"
   },
